app/assets/stylesheets/base/responsive.css.scss
// Device sizes
$mediaMax: $gridRowWidth + $containerPadding * 2; // The maximum we care about, after this it's just fixed-grid
$mediaDesktopSmall: 960px;
$mediaMidLandscape: 1024px;
$mediaMidPortrait: 768px;
$mediaSmallLandscape: 480px;
$mediaSmallPortrait: 320px;

// Visibility utilities

.hidden {
  display: none;
  visibility: hidden;
}
.visible-reader { display: none; }
.hidden-reader { display: block; }

// Default container behavior
.container-fluid {
	@include clearfix;
	padding-left: $containerPadding;
	padding-right: $containerPadding;
	position: relative; // for modals
	
	&#footer-container {
		position: static; // So we can pop out the footer into the side nav
	}
}

// Phone Landscape and below
@media screen and (max-width: $mediaSmallLandscape) {	
	// Make all columns even
	.row-fluid > [class*="span"] {
		float: none;
		display: block;
		width: auto;
		margin: 0;
	}
	
	.hidden-phone      { display: none; }

	// Block level the page header small tag for readability
	.page-header h1 small {
		display: block;
		line-height: $baseLineHeight;
	}
	
	.show-segments .teaser .info {
		border-right: none !important;
		padding-right: 0;
	}
	
	
	.more-news-content {
		border-right: none !important;
	}
	
	.cbase {
		&.offlead .row-fluid { @include makeFluidRow; } // Assets are thumbnails so these can stay in multiple column format
	}
	
	.next-prev .span9 .row-fluid { 
		@include makeFluidRow; // It's just a few words, no need to make it vertical
	}
	
	.related-content {
		border-top: 1px solid $grayLighter;
		padding-top: 10px;
		@include centeredAsset;
	}
	
	// Hide CFF vertical nav, show horizontal nav
		nav.section-nav.vertical { display: none; }
		nav.section-nav.horizontal { display: block; }
	// end CFF navs
	
	.more-news-content {
		border-right: none;
		padding-right: none;
		margin-bottom: 5px;
	}
	
	.homepage-top {
		.events-forum {
			border: none !important;
			padding-left: 0 !important;
			.mq-row-fluid {
				@include makeFluidRow;
			}
		}
	}
	
	// Fake the "pager"... hide all page number links, just show Previous and Next links.
		.pagination { 
			a, span, em {
				display: none;
				&.previous_page { display: inline; } 
				&.next_page { 
					display: inline;
					float: right;
				}
			}
		}
	// End Pager
	
	// Make content carousel assets 2-columns instead of 1 column, since they're just thumbs
		.content-carousel {
			.row-fluid {
				@include makeFluidRow;
				> .span3 {					
					@include gridFluidSpan(6);
					&:nth-child(odd) { padding-left: 0px; margin-left: 0px; }
				}
			}
		}
	// end Content Carousel
	
	.event.content-block .event-details .row-fluid { @include makeFluidRow; } // We can keep this in 2 columns, it's small
	
	// latest videos: 2 cols
		#multimedia .latest-videos {
			.row-fluid {
				@include makeFluidRow;
				> .span3 {
					@include gridFluidSpan(6);
					&:nth-child(odd) { margin-left: 0; }
					&:nth-child(even):after { visibility: hidden; content: "."; } // total hack, need to come up with a better way to do this
				}
			}
		}
	// end latest videos
}


// Between Tablet Portrait and Phone Landscape
@media screen and (max-width: $mediaMidPortrait - 1) and (min-width: $mediaSmallLandscape + 1) {
	@include gridFluid($fluidGridColumnWidth, $fluidGridGutterWidth);
	.head-lead {
		@include vertify;
	}
	
	// Set new widths for main columns in CFF layout
		#forum {
			#forum-span-content { // main content
				@include gridFluidSpan(7);
			}
			#forum-span-sidebar { // sidebar
				@include gridFluidSpan(5);
			}
			
			#forum-span-upcoming-events { // upcoming events
				@include gridFluidSpan(12);
			}
			#forum-span-social { // social media
				display: none;
			}
		}
	// End CFF layout widths
}



// Below Portrait Tablet ("reader mode")
@media screen and (max-width: $mediaMidPortrait - 1) {	
	
	.visible-reader { display: block !important; }
	.hidden-reader { display: none !important; }
	
	.modal-popup { // using important flag here to cover all modals, since most of these rules are specified in more specific classes
		$modalMargin: 4%;
		position: fixed;
		left: $modalMargin !important;
		top: 180px !important; // Leave room for headers to show
		width: 100% - $modalMargin * 2 !important;
		max-height: 75% !important;
		overflow: scroll;
		.arrow-up { display: none; }
		.google-map { 
			max-width: 100%; 
			max-height: 85%;
		} // For google maps modals
	}
	
	.content-block, .fold, .blog-masthead {
		.mq-solo-span { // Spans with this class will be by themselves at the "reader mode" breakpoint, so we need to tell them to span 100% and ditch the left margin
			@include gridFluidSpan(12);
			margin-left: 0;
		}
	}
	
	.fold {
		h6 {
			margin-top: 0 !important;
			text-align: left !important;
		}
		.comment-count {
			display: none;
		}
	}
	
	.article-meta {
		display: none;
	}
	
	// hide Sidebars on "main" bodies
		#main {
			#sidebar, #sidebar-top, #sidebar-bottom {
				display: none;
			}
		}
	// end hide Sidebars
		
	#beta-bar {
		display: none;
	}
	
	// Vertify Layouts
		#main, .homepage-top, .homepage-bottom { // Since we have different sections on the homepage and `vertify` looks for .row-fluid as direct descendants
			@include vertify;
		} 
	// end Vertify

	.broadcast-bar .section.next-program { display: none; }
	#masthead { 
		text-align: center;
		
		// Minimal Header
			background: #2e2e2e;

			#masthead-mid-header-wrapper, #masthead-right-header-wrapper { display: none; }
			.head-lead, .nav-primary { display: none; }
			.head-lead-minimal { display: block !important; }
			
		// end Minimal Header
	}
	
	.homepage-top {
		border-bottom: none !important;
		margin-bottom: 0 !important;
	}
	
	// since we're hiding the sidebars, remove the borders around more news
	.more-news-container {
		border-right: none;
		padding-right: none;
		margin-bottom: 5px;
		.more-news {
			border-bottom: none;
		}
	}
	
	// Forum Events header switch
		#events-header {
			display: none;
		}
	
		.events-header-small { display: block; }
	// end Forum Events Header
	
	.section-nav-header { display: none; }
	#events-event-detail { @include gridFluidSpan(12); }
	
	// Pop the footer nav out and turn it into the side-nav
		html, body, .container-fluid, header, footer { margin: 0; } 
		$compactNavW: 300px; // Be sure to change it in utilities.js/CompactNav as well.
		#page-footer footer {
			background-image:none;
			.partners, .mobile-apps {
				display:none;
			}
			
			.footer-nav {
				position: absolute;
				top: 0;
				left: $compactNavW * -1;		
				width: $compactNavW;
				&.active {
					@include box-shadow(3px 0 8px rgba(0,0,0,.4));
				}
				.compact-nav-head { display: block; }
				h3, .pledge {
					margin-left:12px;
				}
				h3 { // Switch these to have the darker background
					@include footer-h4;
					color:#8f8f8f;
					padding-left:12px;
				}
			
				h4 { 
					@include footer-h3;
					font-size: 12px;
					font-weight:bold;
					color: #696969;
				}
			
				[class*="span"] {
					float: none;
					display: block;
					width: auto;
					margin: 0;
				}
			
				.section {
					border: none;
					display: block;
					padding: 0;
					nav { margin: 0; }
					ul li a, address { padding-left: 10px; }
					ul li, h4, h3 {
						border-top: 1px solid $grayDark;
						border-bottom: 1px solid $black;
						margin: 0;
					}
					ul.inline li.nav-label {
						display:none;
					}
					ul li a {
						color:#e0e0e0;
						font-size:14px;
						padding:4px 0;
					}
				
					ul {
						&.inline li { 
							display: block;
							margin: 0;
						}
						&.social-media {
							margin-bottom:0;
							li {
								margin:0;
								display: block;
								a {
									background-image:none;
									text-indent:0;
									height:auto;
									width:100%;
								}
							}
						}
						li.bullet { 
							background-image: none;
							padding-left: 0;
						}
					}
				}
			}
		
			.bottom-links { border: none; }
		}
	// end sideNav
	
	#video { @include vertify; } // Make the video page stretch out
	#multimedia {
		.video { margin-top: 0; }
	}	
}





// Tablet Portrait And Above
@media screen and (min-width: $mediaMidPortrait) {
	@include gridFluid($fluidGridColumnWidth, $fluidGridGutterWidth);
	.visible-reader { display: none !important; }
	.hidden-reader { display: block !important; }
}


// Below Tablet Landscape
@media screen and (max-width: $mediaDesktopSmall - 1) {
	// Simplify Filters nav to allow for graceful wrapping
		.filters {
			li.heading { display: none !important; }
			.active-arrow { display: none !important; }
		}
	// end Filters
	
	// Pledge Banner to Button & hide form
		#masthead {
			form { display: none; }
			.nav-primary .sections { width: 100%; }
			.mid-header-wrapper {
				text-align: center;
				.pledge-container {
					display: none;
				}

				.pledge-button-container {
					display: inline-block;
				}
			}
		}
	// end Pledge Banner to Button
	
	#uvTab { display: none !important; } // The "feedback" button... fixed position on touch screen, more trouble than it's worth
}



// Small Landscape to desktop small
@media screen and (max-width: $mediaDesktopSmall - 1) and (min-width: $mediaSmallLandscape) {
	
	// vertify the lead stories //
		#main {
			.homepage-lead {
				&.default, &.lead-right {
					@include vertify;
					.offleads {
						@include makeFluidRow;
						.span4:last-child .offlead {
							border-right: none;
						}
						.offlead {
							padding-left: 5px;
							padding-right: 5px;
							border-right: 1px solid $grayLighter;
							border-bottom: none;
						}
					}
				}
			}
		}
	// end //
}

// Below Small Desktop
@media screen and (max-width: $mediaDesktopSmall - 1) {
	.homepage-lead {
		&.default {
			.lead5 {
				border-bottom: 1px solid $grayLighter;
				padding-bottom: 5px;
				margin-bottom: 5px;
			}
		}
		
		&.lead-right {
			.offleads .span4:last-child .offlead { border-bottom: 1px solid $grayLighter; }
			.lead5 {
				padding-bottom: 5px;
				margin-bottom: 5px;
			}
		}
	}
}





// Below Max Width
@media screen and (max-width: $mediaMax - 1) {
	// This happens below maxWidth because the banner is an image.
	// TODO Change the support banner to a more fluid div so it can scale nicely.
	// Remove background from Support Banner to allow fluidity //
		.program-masthead .support {
			display: block !important;
			background: none !important;
			width: auto !important;
			height: auto !important;
			a {
				display: inline;
				color: $black !important;
				text-shadow: none !important;
			}
		}
	// end Support Banner
	
}


// Max width (normal screen) and above
@media screen and (min-width: $mediaMax) {	
	.container-fluid {
		margin-left: auto;
		margin-right: auto;
		max-width: $gridRowWidth;
	}
}

